infrastructure/aws/cloudformation/networking/network-test.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
      "vpcTag": {
        "Type": "String"
      },
      "igTag": {
        "Type": "String"
      },
      "publicRouteTableTag": {
        "Type": "String"
      },
      "privateRouteTableTag": {
        "Type": "String"
      },
      "webSubnetTag": {
        "Type": "String"
      },
      "webSubnet2Tag": {
        "Type": "String"
      }
      ,
      "dbSubnetTag": {
        "Type": "String"
      },
      "webServerSecurityGroupNameTag": {
        "Type": "String"
      },
      "dbSecurityGroupNameTag": {
        "Type": "String"
      },
      "elbSecurityGroupNameTag" : {
          "Type" : "String"
      }
    },
    "Resources": {
      "myVPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "10.0.0.0/16",
          "EnableDnsHostnames": "true",
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Ref": "vpcTag"
              }
            }
          ]
        }
      },
      "webSubnet": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "CidrBlock": "10.0.0.0/24",
          "MapPublicIpOnLaunch": true,
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Ref": "webSubnetTag"
              }
            }
          ],
          "VpcId": {
            "Ref": "myVPC"
          },
          "AvailabilityZone" : "us-east-1c"
        }
      },
      "webSubnet2": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "CidrBlock": "10.0.3.0/24",
          "MapPublicIpOnLaunch": true,
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Ref": "webSubnet2Tag"
              }
            }
          ],
          "VpcId": {
            "Ref": "myVPC"
          },
          "AvailabilityZone" : "us-east-1d"
        }
      }
      
      ,
      "dbSubnet1": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "CidrBlock": "10.0.1.0/24",
          "AvailabilityZone": "us-east-1a",
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Ref": "dbSubnetTag"
              }
            }
          ],
          "VpcId": {
            "Ref": "myVPC"
          }
        }
      },
      "dbSubnet2": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "CidrBlock": "10.0.2.0/24",
          "AvailabilityZone": "us-east-1b",
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Ref": "dbSubnetTag"
              }
            }
          ],
          "VpcId": {
            "Ref": "myVPC"
          }
        }
      },
      "myInternetGateway": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Ref": "igTag"
              }
            }
          ]
        }
      },
      "AttachGateway": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "VpcId": {
            "Ref": "myVPC"
          },
          "InternetGatewayId": {
            "Ref": "myInternetGateway"
          }
        }
      },
      "publicRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "myVPC"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Ref": "publicRouteTableTag"
              }
            }
          ]
        }
      },
      "privateRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "myVPC"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Ref": "privateRouteTableTag"
              }
            }
          ]
        }
      },
      "publicRoute": {
        "Type": "AWS::EC2::Route",
        "DependsOn": "myInternetGateway",
        "Properties": {
          "RouteTableId": {
            "Ref": "publicRouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "myInternetGateway"
          }
        }
      },
      "publicRouteTableSubnetAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "RouteTableId": {
            "Ref": "publicRouteTable"
          },
          "SubnetId": {
            "Ref": "webSubnet"
          }
        }
      },
      "publicRouteTableSubnetAssociation2": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "RouteTableId": {
            "Ref": "publicRouteTable"
          },
          "SubnetId": {
            "Ref": "webSubnet2"
          }
        }
      }
      ,
      "privateRouteTableSubnetAssociation1": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "RouteTableId": {
            "Ref": "privateRouteTable"
          },
          "SubnetId": {
            "Ref": "dbSubnet1"
          }
        }
      },
      "privateRouteTableSubnetAssociation2": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "RouteTableId": {
            "Ref": "privateRouteTable"
          },
          "SubnetId": {
            "Ref": "dbSubnet2"
          }
        }
      },
      "elbSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupName": {
            "Ref": "elbSecurityGroupNameTag"
          },
          "GroupDescription": "Security tag for ELB",
          "SecurityGroupIngress": [
            {
              "CidrIp": "0.0.0.0/0",
              "FromPort": 22,
              "IpProtocol": "tcp",
              "ToPort": 22
            },
            {
              "CidrIp": "0.0.0.0/0",
              "FromPort": 80,
              "IpProtocol": "tcp",
              "ToPort": 80
            },
            {
                "CidrIp": "0.0.0.0/0",
                "FromPort": 443,
                "IpProtocol": "tcp",
                "ToPort": 443
              }
          ],
          "VpcId": {
            "Ref": "myVPC"
          }
        }
      }
      ,
      "webServerSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupName": {
            "Ref": "webServerSecurityGroupNameTag"
          },
          "GroupDescription": "Security tag for web server",
          "SecurityGroupIngress": [
            {
                "SourceSecurityGroupId": {
                  "Ref": "elbSecurityGroup"
                },
                "FromPort": 8080,
                "IpProtocol": "tcp",
                "ToPort": 8080
              }
          ],
          "VpcId": {
            "Ref": "myVPC"
          }
        }
      },
      "dbSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupName": {
            "Ref": "dbSecurityGroupNameTag"
          },
          "GroupDescription": "Security tag for web server",
          "SecurityGroupIngress": [
            {
              "SourceSecurityGroupId": {
                "Ref": "webServerSecurityGroup"
              },
              "FromPort": 3306,
              "IpProtocol": "tcp",
              "ToPort": 3306
            }
          ],
          "VpcId": {
            "Ref": "myVPC"
          }
        }
      }
    },
    "Outputs": {
        "vpcId": {
            "Description": "The ID of the VPC",
            "Value": {
              "Ref": "myVPC"
            },
            "Export": {
              "Name": "csye6225-Networking-vpc"
            }
          },
          "elbSecurityGroupId" : {
            
            "Description": "The ID of the ELB Security Group",
            "Value": {
              "Ref": "elbSecurityGroup"
            },
            "Export": {
              "Name": "csye6225-Networking-elb-security-group"
            }
          },
      "dbSubnet1Id": {
        "Description": "The ID of the db subnet1",
        "Value": {
          "Ref": "dbSubnet1"
        },
        "Export": {
          "Name": "csye6225-Networking-db-subnet1Id"
        }
      },
      "dbSubnet2Id": {
        "Description": "The ID of the db subnet 2",
        "Value": {
          "Ref": "dbSubnet2"
        },
        "Export": {
          "Name": "csye6225-Networking-db-subnet2Id"
        }
      },
      "webSubnetId": {
        "Description": "The ID of web subnet",
        "Value": {
          "Ref": "webSubnet"
        },
        "Export": {
          "Name": "csye6225-Networking-web-subnet"
        }
      },
      "webSubnet2Id": {
        "Description": "The ID of web subnet",
        "Value": {
          "Ref": "webSubnet2"
        },
        "Export": {
          "Name": "csye6225-Networking-web-subnet2"
        }
      }
      ,
      "webServerSecurityGroupId": {
        "Description": "The ID of web server security group",
        "Value": {
          "Ref": "webServerSecurityGroup"
        },
        "Export": {
          "Name": "csye6225-Networking-web-security-group"
        }
      },
      "dbSecurityGroupId": {
        "Description": "The ID of web server security group",
        "Value": {
          "Ref": "dbSecurityGroup"
        },
        "Export": {
          "Name": "csye6225-Networking-db-security-group"
        }
      }
    }
  }
